# conjunto

./: .clangddd  .gitignore  Makefile  Makefile.in  README.md  config.h  config.h.in  configure  configure.ac  lex.yy.c  lex.yy.h  lexico.l  list.c  list.h  main  main.c  out.html  pseudo  sintatico.output  sintatico.tab.c  sintatico.tab.h  sintatico.y  sintaxe.l  subset_sum3.conj  subset_sum4.conj  test.conj  tree.c  tree.h
.vim/: coc-settings.json
.vim/.ropeproject/: objectdb
docs/: bibliografia.bib  doc.tex
include/: builtin.h  config.h  config.h.in  config.h.in~  context.h  eval.h  list.h  set.h  syntatic_node.h  translation.h  tree.h  util.h
src/: Makefile.am  Makefile.in  builtin.c  context.c  eval.c  lexico.l  list.c  main.c  set.c  sintatico.h  sintatico.y  syntatic_node.c  translation.c  tree.c  util.c
test/: minimo.conj  subset_sum1.conj  subset_sum2.conj  subset_sum3.conj  subset_sum4.conj  testinho.conj
